Fix bug where about__text-container layout was broken on mobile.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -270,8 +270,6 @@ body {
         @include grid-item-define(2, -1, 2, -1);
         }
 
-        // width: 75%;
-
         &-list {
             list-style-type: none;
             display: flex;
@@ -447,6 +445,7 @@ body {
 
         &__text-container {
             @include grid-item-define(1, -1, 2, 3);
+            max-width: 90%;
         }
 
         &__skills {
