--- a/style.css
+++ b/style.css
@@ -374,6 +374,7 @@ body {
     grid-column-end: -1;
     grid-row-start: 2;
     grid-row-end: 3;
+    max-width: 90%;
   }
   .about__skills-container {
     grid-column-start: 1;
